# psych-memory-mcp

./: AGENTS.md  Cargo.toml  Dockerfile  GEMINI.md  README.md  docker-compose.yml
.github/workflows/: ci.yml
src/: config.rs  epistemic_lookup.rs  errors.rs  evidence.rs  fact_id.rs  hashing.rs  interpretation_id.rs  lib.rs  main.rs  mapping.rs  occurrence_id.rs  pattern_id.rs  pattern_validation.rs  resolution.rs  server.rs  timeline.rs  validators.rs
src/backend/: fake.rs  mod.rs  reqwest_backend.rs
src/model/: backend_request.rs  epistemic_record.rs  interpretation.rs  journal_fact.rs  mod.rs  pattern_occurrence.rs  pattern_seed.rs  pattern_timeline.rs
tests/: create_pattern_seed.rs  fake_backend.rs  get_epistemic_record.rs  query_pattern_timeline.rs  record_pattern_occurrence.rs  roundtrip.rs  store_interpretation.rs  store_journal_fact.rs
