[package]
name = "psych-memory-mcp"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
rmcp = { version = "1", features = ["server", "macros", "schemars", "transport-io"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = { version = "1", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
thiserror = "2"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
